# gcf-server

./: .gitignore  CMakeLists.txt
include/: GcfDataReader.h  Pratical.h  Rio.h  SoupBin.h
src/: AdressUtility.c  ByteOrderTest.cpp  DieWithMessage.c  FakeGCFServer.c  FakeGCFServer.cpp  FakeGCFServer2.c  FakeMultiCastProducer.c  FakeMultiCastProducer.cpp  GcfDataReader.c  Message.cpp  Message.h  MessageHeader.cpp  MessageHeader.h  MessageUnit.cpp  MessageUnit.h  MitchMessage.cpp  MitchMessage.h  MitchOutput.cpp  MitchOutput.h  MitchTypes.cpp  MitchTypes.h  MultiCastListener.c  MultiCastProxy.c  MultiCastServer.c  OrderDeleted.cpp  OrderDeleted.h  Practical.c  Rio.c  Rio.cpp  SoupBin.c  SoupBinEncoder.cpp  SoupBinEncoder.h  SoupBinEncoderTest.cpp  SoupBinHeader.cpp  SoupBinHeader.h  SoupBinMessage.cpp  SoupBinMessage.h  SoupBinSequenced.cpp  SoupBinSequenced.h  Test.c  (+13 more)
test/: GCFDataReaderTest.c
